objects/AcctSeed__Time_Card_Period__c.object
<CustomObject>
    <description>Used to capture the specific time frame e.g. start date and end date associated with a time card.</description>
    <fields>
        <fullName>AcctSeed__End_Date__c</fullName>
        <inlineHelpText>Last day of the Time Card Period. This field is automatically calculated to be 6 days after the start date entered for the Time Card Period.. A value entered directly into this field will be overwritten.</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Number_of_Related_Accounting_Periods__c</fullName>
        <inlineHelpText>A Time Card should be related to 1 or 2 accounting periods. If the Time Card Period start and end date both reside in the same accounting period then it should be related to 1 accounting period. If it crosses 2 accounting periods it should be 2.</inlineHelpText>
        <label>Number of Related Accounting Periods</label>
        <summaryForeignKey>AcctSeed__Time_Card_Accounting_Period__c.AcctSeed__Time_Card_Period__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Start_Date__c</fullName>
        <inlineHelpText>Beginning of the Time Card Period. Typically a Monday or Sunday.</inlineHelpText>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Status__c</fullName>
        <inlineHelpText>&quot;Open&quot; indicates that Time Cards can be entered for this period. &quot;Closed&quot; indicates that no new Time Cards can be entered for this period.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Time Card Period</label>
    <listViews>
        <fullName>AcctSeed__All1</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__End_Date__c</columns>
        <columns>AcctSeed__Start_Date__c</columns>
        <columns>AcctSeed__Status__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AcctSeed__All_Open</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Start_Date__c</columns>
        <columns>AcctSeed__End_Date__c</columns>
        <columns>AcctSeed__Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AcctSeed__Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>All Open</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Period Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Time Card Periods</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>AcctSeed__Start_Date_Not_Greater_End_Date</fullName>
        <active>false</active>
        <errorConditionFormula>AcctSeed__Start_Date__c &gt; AcctSeed__End_Date__c</errorConditionFormula>
        <errorMessage>The start date cannot be greater than the end date.</errorMessage>
    </validationRules>
</CustomObject>